<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_text">Want to know it all about the vehicle that was over speeding the other day? or about the one that is always parked blocking your passage ? At Cuvora, we understand your problems and requirements equally and hence here we bring out our car info app to resolve your vehicle details queries with just a click. All you have to do is enter the vehicle number you want to know about and we will provide you with the information you need. So, now you know whom to catch for that rash driving :)</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text">This app is developed to enable our users to easily discover finest content available from youtube. We believe in giving best services to our users without failure. We aim at constantly improving ourselves, to help us achieve our motto help us spread the love by sharing the app with your friends and family. Also, give us your valuable feedback at contact@cuvora.com</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="ad_free_exp_n_days">Watch a 30 second video and get Ad-Free experience for %1$d days.</string>
    <string name="ad_free_rewarded_subsc_congrats">Enjoy %1$d days of Ad-Free experience on Car Info. In case you have any app related feedback or suggestions on how we can improve your experience, use Feedback option in the sidebar to drop us an email. We would love to serve you better.</string>
    <string name="ad_free_subsc_congrats">Thanks for subscribing to Ad-Free experience on Car Info. In case you have any app related feedback or suggestions on how we can improve your experience, use Feedback option to drop us an email. We would love to serve you better.</string>
    <string name="add_to_garage">ADD TO GARAGE</string>
    <string name="alert_already_purchased">Item is already purchased</string>
    <string name="alert_drove">Vroooom, you drove a few miles.</string>
    <string name="alert_error_consuming">Error while consuming: %1$s</string>
    <string name="alert_fill_gas">You filled ¼ tank. Your tank is now %1$d/4 full!</string>
    <string name="alert_no_gas">Oh, no! You are out of gas! Try buying some!</string>
    <string name="app_force_update_desc">Your app version is too old. Update from Playstore in order to proceed.</string>
    <string name="app_force_update_title">Update Required!</string>
    <string name="app_icon">https://storage.googleapis.com/carinfocdn/video-app/devotional.jpg</string>
    <string name="app_name">Car Info</string>
    <string name="app_name_prem">Car Info - Premium</string>
    <string name="app_update_description">There is a new version available at Playstore. Would you like to update?</string>
    <string name="app_update_title">Updated version available!</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bluetooth_sharing_text">Send APK directly to friends with Android phone via bluetooth. No internet required.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="branch_api_key">key_live_mmy7HVFGOvcpDyzU2XLC6eepyylCc5VZ</string>
    <string name="branch_scheme">devotionalapp</string>
    <string name="button_already_subscribed">Subscribed</string>
    <string name="button_buy">Buy</string>
    <string name="button_change">Change</string>
    <string name="button_drive">Drive</string>
    <string name="button_own">Own</string>
    <string name="button_purchase">Purchase</string>
    <string name="button_update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="car_brands_screen_banner_ad_unit_id">ca-app-pub-8646722329420776/1572855567</string>
    <string name="car_features_screen_ad_unit_id">ca-app-pub-8646722329420776/5008881158</string>
    <string name="car_models_screen_banner_ad_unit_id">ca-app-pub-8646722329420776/7037946998</string>
    <string name="car_variants_versions_screen_banner_ad_unit_id">ca-app-pub-8646722329420776/8338408616</string>
    <string name="change_city">Change City</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">b049dfaf-e229-4761-a412-4948fb1803ef</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="congrats_ad_free_month">Enjoy 1 month ad free experience</string>
    <string name="congrats_ad_free_month_six">Enjoy 6 months ad free experience</string>
    <string name="contact_carinfo">Contact Car Info</string>
    <string name="contact_carinfo_error">Message length should be atleast 20 characters.</string>
    <string name="contact_carinfo_for_error">Contact Car Info for RC error</string>
    <string name="contact_carinfo_message">Please write your message here</string>
    <string name="contact_customer_support">Developer Support</string>
    <string name="contact_customer_support_para">For any queries or feedback, \nplease tap connect us to drop us an email</string>
    <string name="contact_us">Contact Us</string>
    <string name="content_desc_free_vs_premium_indicator">Free or Premium Image Indicator</string>
    <string name="content_desc_gas_gauge_indicator">Gas gauge indicator</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="content_description_title_image">80\'s Video Game Style Car Logo</string>
    <string name="default_notification_channel_id">carinfo_news</string>
    <string name="default_web_client_id">924312061487-rs3ogdlvet6iu8f1pcj221drsj3v5ruq.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_recent_confirmation">Removing all your searches, are you sure ?</string>
    <string name="delete_confirmation">Are you sure you want to remove this vehicle from your %s?</string>
    <string name="delete_from_garage">Remove from garage</string>
    <string name="dob_disclaimer">DOB is required by RTO website for security reasons.</string>
    <string name="dob_text">DATE OF BIRTH</string>
    <string name="licence_note_text">Note: This feature is in beta, details for your city may not be available at the moment.</string>
    <string name="licence_search_text">Enter your licence number</string>
    <string name="loving_carinfo">Loving Car Info?</string>
    <string name="ok_text">OK</string>
    <string name="other_sharing_text">Send Car Info download link via Facebook, Email, Messenger, WeChat, Line etc.</string>
    <string name="rating_affirmative_text">Rate 5 stars</string>
    <string name="rating_feedback_text">May be later</string>
    <string name="rating_no_text">NO</string>
    <string name="rating_yes_text">YES</string>
    <string name="recent_search_placholder">Hey! you have not searched any vehicle number yet!!\n</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="recent_searches_banner_ad_unit_id">ca-app-pub-8646722329420776/1442496048</string>
    <string name="reverse_search_detail">Now you can search cars by owner name.\n Check out your friends\' cars!</string>
    <string name="review_app_message1">Accurate vehicle registration information</string>
    <string name="review_app_message2">Great look and feel of the app</string>
    <string name="review_app_message3">All in one app for vehicle information</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_now">Search Now</string>
    <string name="share_via">Share Via</string>
    <string name="try_now">Try Now</string>
    <string name="whatsapp_sharing_text">Share Car Info download link to all your WhatsApp buddies.</string>
</resources>