<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatTextView android:textSize="20sp" android:textStyle="bold" android:textColor="@c2101a/colorPrimary" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_via"/>
    <View android:background="@c2101a/colorPrimary" android:layout_width="match_parent" android:layout_height="4dp"/>
    <LinearLayout android:id="@c1487a/bluetooth_share_ll" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?android:attr/selectableItemBackground">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_bluetooth"/>
        <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/bluetooth_sharing_text"/>
    </LinearLayout>
    <View android:background="@c2101a/colorPrimary" android:layout_width="match_parent" android:layout_height="2dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp"/>
    <LinearLayout android:id="@c1487a/whatsapp_share_ll" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?android:attr/selectableItemBackground">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_whatsapp"/>
        <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/whatsapp_sharing_text"/>
    </LinearLayout>
    <View android:background="@c2101a/colorPrimary" android:layout_width="match_parent" android:layout_height="2dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp"/>
    <LinearLayout android:id="@c1487a/other_share_ll" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?android:attr/selectableItemBackground">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_networking"/>
        <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/other_sharing_text"/>
    </LinearLayout>
</LinearLayout>
