<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_centerInParent="true">
    <ImageView android:id="@c1487a/iv_title" android:layout_width="match_parent" android:layout_height="80dp" android:src="0x7f070099" android:scaleType="fitXY" android:layout_alignParentTop="true"/>
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@c2101a/white" android:gravity="center" android:id="@c1487a/tv_search_by_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_by_name" android:shadowColor="@c2101a/white" android:layout_alignBottom="@c1487a/iv_title" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:textAllCaps="true"/>
    <TextView android:textSize="18sp" android:textColor="@color/app_text_dark_black_color" android:gravity="center" android:id="@c1487a/tv_detail_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/reverse_search_detail" android:layout_below="@c1487a/tv_search_by_name"/>
    <View android:id="@c1487a/v_space" android:background="@c2101a/gray_dark" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp" android:layout_below="@c1487a/tv_detail_text"/>
    <android.support.v7.widget.AppCompatButton android:textColor="?attr/colorAccent" android:id="@c1487a/btn_try_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/try_now" android:drawableLeft="0x7f0700d1" android:drawablePadding="10dp" android:layout_below="@c1487a/v_space" android:layout_centerHorizontal="true" style="@style/Widget.AppCompat.Button.Borderless"/>
</RelativeLayout>
