<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@c1487a/rootDl" android:background="#eae9e9" android:layout_width="match_parent" android:layout_height="match_parent" app:elevation="5dp">
    <android.support.v7.widget.AppCompatTextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/app_text_dark_black_color" android:id="@c1487a/tvHeader" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/licence_search_text" android:fontFamily="sans-serif-medium" android:paddingStart="10dp" android:paddingEnd="10dp" app:layout_constraintBottom_toTopOf="@c1487a/tvDesc" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2"/>
    <android.support.v7.widget.AppCompatTextView android:textSize="14sp" android:textColor="@color/app_text_light_black_color" android:id="@c1487a/tvDesc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/licence_note_text" android:paddingStart="10dp" android:paddingEnd="12dp" app:layout_constraintBottom_toTopOf="@c1487a/etDlNumber" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@c1487a/tvHeader" app:layout_constraintVertical_chainStyle="2"/>
    <EditText android:textSize="20sp" android:textStyle="bold" android:textColor="@color/app_text_dark_black_color" android:textColorHint="@color/hint_color" android:id="@c1487a/etDlNumber" android:background="@drawable/white_back_round" android:layout_width="match_parent" android:layout_height="64dp" android:layout_marginTop="16dp" android:hint="TN75 2013 8090907" android:maxLines="1" android:minLines="1" android:singleLine="true" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789" android:drawablePadding="16dp" android:inputType="textVisiblePassword" android:imeOptions="actionDone" android:textAllCaps="true" android:drawableStart="@drawable/ic_mag" android:paddingStart="16dp" android:paddingEnd="64dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:elevation="10dp" app:layout_constraintBottom_toTopOf="@c1487a/etDob" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@c1487a/tvDesc" app:layout_constraintVertical_chainStyle="2"/>
    <android.support.v7.widget.AppCompatImageView android:id="@c1487a/ivInfo" android:layout_width="64dp" android:layout_height="64dp" android:src="@drawable/ic_information" android:scaleType="centerInside" android:layout_marginEnd="16dp" app:elevation="10dp" app:layout_constraintBottom_toBottomOf="@c1487a/etDlNumber" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@c1487a/etDlNumber"/>
    <android.support.v7.widget.AppCompatEditText android:textSize="20sp" android:textStyle="bold" android:textColor="@color/app_text_dark_black_color" android:textColorHint="@color/hint_color" android:id="@c1487a/etDob" android:background="@drawable/white_back_round" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="0dp" android:layout_height="64dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:hint="@string/dob_text" android:cursorVisible="false" android:maxLines="1" android:minLines="1" android:singleLine="true" android:drawablePadding="16dp" android:inputType="textCapCharacters" android:drawableStart="@drawable/ic_calendar" android:paddingStart="16dp" android:paddingEnd="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:elevation="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@c1487a/btn" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@c1487a/etDlNumber" app:layout_constraintVertical_chainStyle="2"/>
    <android.support.v7.widget.AppCompatTextView android:textSize="17sp" android:textStyle="bold" android:textColor="@c2101a/white" android:gravity="center" android:id="@c1487a/btn" android:background="@drawable/gradient_back_license_search" android:layout_width="90dp" android:layout_height="64dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:text="@string/search" android:textAllCaps="true" android:layout_marginEnd="16dp" app:elevation="5dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@c1487a/etDlNumber"/>
    <android.support.v7.widget.AppCompatImageView android:id="@c1487a/ivHelp" android:layout_width="15dp" android:layout_height="15dp" android:layout_marginTop="6dp" android:src="0x7f0700ab" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@c1487a/etDob"/>
    <android.support.v7.widget.AppCompatTextView android:textSize="12sp" android:gravity="center_vertical" android:id="@c1487a/dobDisclaimer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/dob_disclaimer" android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@c1487a/ivHelp" app:layout_constraintTop_toBottomOf="@c1487a/etDob"/>
</android.support.constraint.ConstraintLayout>
